--- a/src/locales/ar/translation.json
+++ b/src/locales/ar/translation.json
@@ -2,5 +2,6 @@
     "Maghnia": "مغنية",
     "Min": "الصغرى",
     "Max": "الكبرى",
-    "Arabic": "الإنقليزية"
+    "Arabic": "الإنقليزية",
+    "Loading weather data...": "يتم تحميل البيانات ..."
 }
